[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/SkyTileSprite.png" type="Texture" id=1]
[ext_resource path="res://scenes/bird.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/GrassThinSprite.png" type="Texture" id=3]
[ext_resource path="res://scripts/main.gd" type="Script" id=4]
[ext_resource path="res://scripts/ground.gd" type="Script" id=5]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2053.55, 122.253 )

[node name="MainNode" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1.68189, 0 )
scale = Vector2( 0.62676, 0.704706 )
texture = ExtResource( 1 )
centered = false

[node name="Bird" parent="." instance=ExtResource( 2 )]
position = Vector2( 315.272, 155.964 )
collision_layer = 2147483649
contacts_reported = 1
contact_monitor = true

[node name="ColumnSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Ground" type="KinematicBody2D" parent="."]
position = Vector2( 1023.43, 605.108 )
z_index = 1
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Ground"]
position = Vector2( -6.10352e-05, -6.10352e-05 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="Ground"]
position = Vector2( 2048, -6.10352e-05 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 1014.26, 128.145 )
shape = SubResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 6 )]
[connection signal="hit" from="Bird" to="HUD" method="_on_Bird_hit"]
[connection signal="hit" from="Bird" to="." method="_on_Bird_hit"]
[connection signal="restart_game" from="Bird" to="." method="_restart_game"]
[connection signal="timeout" from="ColumnSpawnTimer" to="." method="_on_ColumnSpawnTimer_timeout"]
